Added personal live link

--- a/CKDprediction.Rmd
+++ b/CKDprediction.Rmd
@@ -310,7 +310,7 @@ Our project specifically uses data from 250 participants with chronic kidney dis
 
 **App Description**
 
-Live App Link:
+Live App Link: https://bstraus.shinyapps.io/CKDprediction/
 
 This app plots data of patients with Chronic Kidney Disease (CKD) and makes a prediction of CKD given data using a classifying model on the CKD data.
 
