--- a/CKDprediction.Rmd
+++ b/CKDprediction.Rmd
@@ -89,7 +89,7 @@ Column {.tabset}
 
 **Introduction**
 
-This project was designed to demonstrate our knowledge of data science which includes obtaining data from a study, pre-processing that data into a usable form, analyzing the data and designing an app that can be powered by the data, creating a shiny web app that uses the data, train a classifier on the data, and finally make a prediction using that classifier. Overall, this process well encapsulates standard procedures with data and visualization that are used to make well-corroborated conclusions that would be reconcluded if the same raw data were given to another group. This is an essential part of data science.
+This project was designed to demonstrate our knowledge of data science which includes obtaining data from a study, pre-processing that data into a usable form, analyzing the data and designing a shiny web app that can be powered by the data, displaying useful figures that describe and filter the data, train a classifier on the data, and finally make a prediction using that classifier. Overall, this process well encapsulates standard procedures with data and visualization that are used to make well-corroborated conclusions that would be reconcluded if the same raw data were given to another group. This is an essential part of data science.
 
 **Data**
 
@@ -97,7 +97,9 @@ Our project specifically uses data from 250 participants with chronic kidney dis
 
 **App Description**
 
-Live App Link: https://vrose9.shinyapps.io/Chronic_Kidney_Disease_Final/#section-data-overview
+Live App Link: https://bstraus.shinyapps.io/CKDprediction/
+
+App Video: https://www.dropbox.com/s/xhk1nps9bjq7wuq/Straus_CKD_DataScienceProject.mp4?dl=0
 
 This app plots data of patients with Chronic Kidney Disease (CKD) and makes a prediction of CKD given data using a classifying model on the CKD data.
 
@@ -135,7 +137,7 @@ Timothy Bedard: Sidebar, datatable, and structure
 
 Jay Mandavilli: predictive models
 
-Tori Rose:filtered data: range selection, filtered table + visualization; predictive toolbar
+Tori Rose: filtered data: range selection, filtered table + visualization; predictive toolbar
 
 Benjamin Straus: readme, app description and how-tos, documentation page
 
